<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_md"
    android:importantForAccessibility="yes">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vendor_performance_title"
        android:textSize="@dimen/heading_h2"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_md"
        android:gravity="center"
        android:contentDescription="@string/vendor_performance_title_desc" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/analyticsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_normal"
            android:lineSpacingExtra="@dimen/spacing_xs"
            android:textColor="@color/text_primary"
            android:contentDescription="@string/vendor_performance_analytics_desc" />

    </ScrollView>

</LinearLayout>